--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript">
         console.log('Hello World');
     </script>
+    <script type="text/javascript" src="js/scripts.js"></script>
 </head>
 <body>
 </body>
