--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -55,41 +54,56 @@
           </div>
         </div>
 
-			<div class="control-group">
-				<!-- Username -->
-				<label class="control-label" for="firstname">First name</label>
-				<div class="controls">
-					<input type="text" id="firstname" name="firstname" placeholder="" class="input-xlarge">
-					<p class="help-block">First name can contain any letters or numbers, without spaces</p>
-				</div>
-			</div>
+        <div class="control-group">
+          <!-- Username -->
+          <label class="control-label" for="firstname">First name</label>
+          <div class="controls">
+            <input
+              type="text"
+              id="firstname"
+              name="firstname"
+              placeholder=""
+              class="input-xlarge"
+            />
+            <p class="help-block">
+              First name can contain any letters or numbers, without spaces
+            </p>
+          </div>
+        </div>
 
-			<div class="control-group">
-				<!-- Username -->
-				<label class="control-label" for="lastname">Last name</label>
-				<div class="controls">
-					<input type="text" id="lastname" name="lastname" placeholder="" class="input-xlarge">
-					<p class="help-block">Username can contain any letters or numbers, without spaces</p>
-				</div>
-			</div>
+        <div class="control-group">
+          <!-- Username -->
+          <label class="control-label" for="lastname">Last name</label>
+          <div class="controls">
+            <input
+              type="text"
+              id="lastname"
+              name="lastname"
+              placeholder=""
+              class="input-xlarge"
+            />
+            <p class="help-block">
+              Username can contain any letters or numbers, without spaces
+            </p>
+          </div>
+        </div>
 
-			<div class="control-group">
-				<!-- Username -->
-				<label class="control-label" for="phonenumber">Phone Number</label>
-				<div class="controls">
-					<input type="number" id="phonenumber" name="phonenumber" placeholder="" class="input-xlarge">
-					<p class="help-block">Username can contain any letters or numbers, without spaces</p>
-				</div>
-			</div>
-
-			<div class="control-group">
-				<!-- E-mail -->
-				<label class="control-label" for="email">E-mail</label>
-				<div class="controls">
-					<input type="text" id="email" name="email" placeholder="" class="input-xlarge">
-					<p class="help-block">Please provide your E-mail</p>
-				</div>
-			</div>
+        <div class="control-group">
+          <!-- Username -->
+          <label class="control-label" for="phonenumber">Phone Number</label>
+          <div class="controls">
+            <input
+              type="number"
+              id="phonenumber"
+              name="phonenumber"
+              placeholder=""
+              class="input-xlarge"
+            />
+            <p class="help-block">
+              Username can contain any letters or numbers, without spaces
+            </p>
+          </div>
+        </div>
 
         <div class="control-group">
           <!-- Password -->
