--- a/index.html
+++ b/index.html
@@ -107,6 +107,19 @@
 
         <div class="control-group">
           <!-- Password -->
+          <label for="_password" class="control-label">Password</label>
+
+          <div class="controls">
+            <input
+              type="password"
+              id="_password"
+              name="_password"
+              placeholder=""
+              class="input-xlarge"
+            />
+            <p class="help-block">Please enter your password</p>
+          </div>
+
           <label class="control-label" for="password_confirm"
             >Password (Confirm)</label
           >
