--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <title>HPlus Sport</title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="/js/scripts.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <script src=”https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js”></script>
 </head>
 <body>
 
@@ -12,7 +16,7 @@
   <nav class="nav" role="navigation">
     <div class="container nav-elements">
       <div class="branding">
-        <a href="#home"><img src="images/hpluslogo.svg" alt="Logo - H Plus Sports"></a>
+        <a href="#home"><img class id="logo" src="images/hpluslogo.svg" alt="Logo - H Plus Sports"></a>
       </div><!-- branding -->
       <ul class="navbar">
         <li><a href="#home">home</a></li>
@@ -191,6 +195,8 @@
       </div><!-- person-card -->
   </div><!-- container -->
 </section><!-- people -->
+
+<button id="backtotop_btn" class="totop"></button>
 
 <footer class="footer">
   <header class="imageheader"></header>
