--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Hello World</title>
     <script type="text/javascript">
-        console.log('Hello World');
+      console.log("Hello World");
     </script>
 
     <script type="text/javascript" src="js/scripts.js"></script>
-
-</head>
-<body>
-</body>
+  </head>
+  <body>
+    <button id="btn">Search</button>
+    <input type="text" />
+  </body>
 </html>
