--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="container">
         <div id="imageWrapper" class="row">
-            <div class="col-md-3 col-sm-4 col-xs-6">
+            <!-- <div class="col-md-3 col-sm-4 col-xs-6">
                 <img class="img-responsive" src="https://live.staticflickr.com/65535/49514452178_12f349345d_m.jpg">
                 </img>
             </div>
@@ -32,10 +32,14 @@
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6">
                 <img class="img-responsive" src="https://live.staticflickr.com/65535/49514452433_9b566c48aa_m.jpg">
-                </img>
+                </img> -->
             </div>
         </div>
     </div>
+    <form name="searchBar">
+        <input name="searchQuery" type="text">
+        <input type="button" name="searchButton" value="search">
+    </form>
 </body>
 
 </html>
