--- a/index.html
+++ b/index.html
@@ -285,10 +285,12 @@
         <a href="#" class="mr-2 mb-2">Facebook</a>
         <a href="#" class="mr-2 mb-2">Instagram</a>
       </p>
+      <button id="click_popup3" onclick="click_popup3" value="popup3">POPUP3</button>
+
       <!-- <h2 class="mb-4 mt-5">Services</h2>
         <div class="row">
           <div class="col-md-6 col-lg-6 mb-4">
-            <div class="media custom-media  d-block">
+            <div class="media cusom-media  d-block">
               <div class="icon mr-3"><span class="ion-android-cart"></span></div>
               <div class="media-body">
                 <h3 class="mt-0"><a href="#">eCommerce Websites</a></h3>
